# fidimag

./: .gitignore  .hgignore  .readthedocs.yml  .travis.yml  AUTHORS.txt  BUILD.md  CHANGELOG.md  CMakeLists.txt  Dockerfile  LICENSE.txt  Makefile  PUBLICATIONS.md  README.md  __init__.py  anis.c  anisotropy.py  clib.c  clib.h  clib.pyx  demag.c  demag.py  exch.c  exchange.py  fd_mesh.py  index.html  license & credits.txt  llg.c  makefile  materials.py  pyproject.toml  pytest.ini  readthedocs.yml  setup.py  setup_iridis.py  show_vector.py  sim.py  spin.txt  tools.py  ubuntu_install_script.sh  zeeman.py
.github/workflows/: build.yml  codeql-analysis.yml  superlinter.yml
baryakhtar/: __init__.py  baryakhtar.py  demag.py  exchange.py  relax.py  sim.py  zeeman.py
baryakhtar/cython/: baryakhtar_clib.h  baryakhtar_clib.pyx  exch.c  llg.c  util.c
baryakhtar/example/: relax_system.py  wire.py
cmake/: FindSUNDIALS.cmake
cp/: anis.c  clib.h  clib.pyx  cvode.pxd  demag.c  demag_oommf.c  demagcoef.h  dmi.c  exch.c  llg.c  llg_random.h  sllg.c  stt.c  util.c
cp/neb/: neb.c  neb.h  neb_clib.pyx
cp/sundials/: cvode.pxd  cvode.pyx
css/: main.css  styles.css
doc/: Makefile  conf.py  core_eqs.rst  develop.rst  environment.yml  extended_eqs.rst  index.rst  install.rst  make.bat  monte_carlo.rst  nebm.rst  todo.org
doc/_templates/: custom-template.html
doc/ipynb/: 1d_domain_wall.ipynb  FMR-stdprob.ipynb  STT_DW_motion.ipynb  Simulating an Anisotropic Grain Structure.ipynb  Spin-polarised-current-driven-skyrmion.ipynb  anisotropic-grain-structure.ipynb  current-driven-domain-wall.ipynb  fail.ipynb  ferromagnetic-resonance-stdprob.ipynb  isolated_skyrmion.ipynb  pass.ipynb  runtimes.org  sanitize_file  skyrmions-applied-field-gradient.ipynb  spin-polarised-current-driven-skyrmion.ipynb  spin-waves-in-periodic-system.ipynb  standard_problem_4.ipynb  steepest_descent.ipynb  steepest_descent_atomistic.ipynb  tutorial-basics.ipynb  tutorial-docker-container.ipynb
doc/physics/: core_eqs.rst  index.rst
doc/physics_num_methods/: extended_eqs.rst  index.rst  nebm.rst
doc/theory/: index.rst
doc/user_guide/: develop.rst  index.rst
docker/minimal-py2/: Dockerfile  Makefile  Readme.md
docker/minimal-py3/: Dockerfile  Makefile  Readme.md
docker/notebook/: Dockerfile  Makefile  Readme.md
docker/testing/: Dockerfile
docker/travis/: Dockerfile
examples/: dw-field.py  sw.py  temperature.py
examples/PRL_108_017601/: figure1.py  figure2.py
examples/PRL_111_067203/: single.py
examples/atomic/: sw.py
examples/atomistic/: sw.py
examples/demag_field/: demag_field.py
examples/dmi/: dmi_1d.py  dmi_2d.py
examples/dw_demag/: dw_demag.py
examples/dw_field/: dw-field.py
examples/eigen/: skx.py
examples/heat/: dw-heat.py  macrospin.py  temperature.py
examples/mc/: skx.py
examples/single_spin/: single_spin.py  unnamed.txt
examples/skyrmion_demag/: single_ku.py
examples/stt/: stt.py
examples/stt_dmi/: dmi_2d.py
fidimag/: __init__.py  gui.py
fidimag/atomistic/: __init__.py  a_clib.pyx  anisotropy.py  atomistic_driver.py  constant.py  cuboid_mesh.py  cuboid_mesh_test.py  demag.py  demag_full.py  demag_hexagonal.py  dmi.py  eigen.py  energy.py  exchange.py  exchange_new.py  field.py  field_test.py  hexagonal_mesh.py  hexagonal_mesh_test.py  llg.py  llg_stt.py  llg_stt_cpp.py  llg_stt_slonczewski_type.py  materials.py  mc.py  mesh.py  minimiser.py  monte_carlo.py  show_vector.py  sim.py  sllg.py  steepest_descent.py  zeeman.py
fidimag/baryakhtar/: __init__.py  baryakhtar.py  relax.py
fidimag/common/: __init__.py  batch_task.py  c_clib.pyx  chain_method_base.py  chain_method_integrators.py  chain_method_tools.py  citation.py  constant.py  cuboid_mesh.py  cuboid_mesh_test.py  driver_base.py  field.py  fileio.py  gradient_descent.py  helper.py  hubert_minimiser.py  integrators.py  integrators_test.py  llg_driver.py  minimiser_base.py  neb_cartesian.py  neb_method.py  neb_spherical.py  nebm_FS.py  nebm_base.py  nebm_cartesian.py  nebm_geodesic.py  nebm_integrators.py  nebm_spherical.py  nebm_tools.py  plot.py  plt_helper.py  save_vtk.py  sim2fdfield.py  sim_base.py  simple_minimiser.py  skyrmion_number.py  skyrmion_number_test.py  steepest_descent.py  string_method.py  (+3 more)
fidimag/cp/: demag.c  dmi.c  stt.c  util.c
fidimag/micro/: __init__.py  anisotropy.py  baryakhtar.py  demag.py  dmi.py  energ.pyx  energy.py  exchange.py  exchange_rkky.py  llg.py  llg_stt.py  llg_stt_cpp.py  mesh.py  micro_driver.py  omf.py  oommf.py  relax.py  sim.py  simple_demag.py  zeeman.py
fidimag/pc/: anisotropy.py  (+11 more)
flatpak/: io.github.computationalmodelling.Fidimag.yml  requirements.txt
js/: main.js
lib/: install.sh
libs/: install.sh
micro/: __init__.py  anisotropy.py  demag.py  dmi.py  energy.py  exchange.py  llg.py  llg_stt.py  mesh.py  sim.py  zeeman.py
native/: Makefile
pc/: __init__.py  anisotropy.py  batch_task.py  constant.py  demag.py  dmi.py  exchange.py  fd_mesh.py  fileio.py  llg.py  materials.py  mesh.py  meshes.py  neb_cartesian.py  save_vtk.py  save_vtk_test.py  show_vector.py  sim.py  sllg.py  test.py  zeeman.py
pcc/: sim.py
scripts/: cube.js
src/: llg.py  mesh.py
styles/: .main.css.swp  bootstrap.min.css  main.css
tests/: __init__.py  conftest.py  cuboid_mesh_test.py  field_test.py  hexagonal_mesh_test.py  integrators_test.py  jacobian_computation.py  mini_test.py  tes_oommf.py  test_2dpbc_cube.py  test_C_classes.py  test_add_remove_interaction.py  test_anis.py  test_atomistic_zeeman.py  test_check_ms_inv_sensible.py  test_citation.py  test_demag.py  test_demag_libraries.py  test_dmi.py  test_domain_wall_cobalt.py  test_dw_atomistic.py  test_dw_dmi.py  test_energy.py  test_exch.py  test_exch_micro.py  test_exch_rkky.py  test_exch_uniform.py  test_full_exch.py  test_hubert_minimiser.py  test_imports.py  test_init_scalar.py  test_init_vector.py  test_llg.py  test_llg_atomistic.py  test_llg_integrator_choices.py  test_llg_openmp.py  test_llg_raises_error.py  test_mc.py  test_mesh.py  test_micromagnetic_zeeman.py  (+25 more)
util/: helper.py  omf.py  oommf.py
(+347 files in other folders)
