[project]
name = "fidimag"
dynamic = ["version"]
description = "Atomistic and Finite-DIfference microMAGnetic code, based on Python, Cython and C "
readme = "README.md"
# Not fully supported:
# license-files = ["LICENSE.txt"]
# license = "BSD-2-Clause"
requires-python = ">= 3.10"
dependencies = [
    'numpy',
    'scipy',
    'cython>=3.0.0',
    'pytest',
    'matplotlib',
    'ipywidgets',
    'pyvtk',
    'ipython',
    'psutil'
]
authors = [
    { name = "Weiwei Wang" },
    { name = "David Cortes Ortuno" },
    { name = "Ryan Pepper" },
    { name = "Hans Fangohr" },
    { name = "Marc-Antonio Bisotti" },
    { name = "Thomas Kluyver" },
    { name = "Mark Vousden" },
    { name = "Oliver Laslett" },
    { name = "Rebecca Carey" },
]

maintainers = [
  {name = "David Cortes Ortuno", email = "david.cortes.o@gmail.com"},
  {name = "Ryan Pepper"}
]

[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools",
    "numpy",
    "cython>=3.0.0",
]
