# Modern pyproject.toml using scikit-build-core
# This replaces setup.py entirely

[build-system]
requires = [
    "scikit-build-core>=0.8",
    "cython>=3.0.0",
    "numpy>=1.21",
]
build-backend = "scikit_build_core.build"

[project]
name = "fidimag"
version = "3.0"
description = "Finite Difference Atomistic and Micromagnetic Simulation Package"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "BSD-2-Clause"}

authors = [
    {name = "Weiwei Wang"},
    {name = "David Cortes Ortuno"},
    {name = "Ryan Pepper"},
    {name = "Hans Fangohr"},
    {name = "Marc-Antonio Bisotti"},
    {name = "Thomas Kluyver"},
    {name = "Mark Vousden"},
    {name = "Oliver Laslett"},
    {name = "Rebecca Carey"},
]

maintainers = [
    {name = "David Cortes Ortuno", email = "david.cortes.o@gmail.com"},
    {name = "Ryan Pepper"}
]

keywords = [
    "physics",
    "simulation",
    "magnetism",
    "micromagnetics",
    "atomistic",
    "scientific-computing",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: C",
    "Programming Language :: C++",
    "Programming Language :: Cython",
    "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
    "numpy>=1.21",
    "scipy>=1.7",
    "matplotlib>=3.0",
    "ipywidgets>=7.0",
    "pyvtk",
    "ipython>=7.0",
    "psutil>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "nbval",
]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
]
test = [
    "pytest>=6.0",
]

[project.urls]
Homepage = "https://github.com/computationalmodelling/fidimag"
Documentation = "https://fidimag.readthedocs.io"
Repository = "https://github.com/computationalmodelling/fidimag"
Issues = "https://github.com/computationalmodelling/fidimag/issues"

# scikit-build-core configuration
[tool.scikit-build]
# Minimum CMake version (updated syntax for scikit-build-core >= 0.8)
cmake.version = ">=3.18"

# Build directory
build-dir = "build/{wheel_tag}"

# Verbose output for debugging (updated syntax for scikit-build-core >= 0.10)
build.verbose = false

# Install C/C++ libraries to package
install.components = ["python"]

# Don't strip symbols (useful for debugging)
install.strip = false

# CMake configuration options
[tool.scikit-build.cmake.define]
# Add local library paths to CMake search path
CMAKE_PREFIX_PATH = "${SKBUILD_PROJECT_DIR}/local"

# Build type (Release for optimization)
CMAKE_BUILD_TYPE = "Release"

# Note: Use CMAKE_GENERATOR="Unix Makefiles" environment variable if needed

# OpenMP support
# (CMake will find it automatically via FindOpenMP)

# Override these with environment variables if needed:
# CMAKE_PREFIX_PATH=/custom/path pip install .
# or
# SUNDIALS_ROOT=/path pip install .
# FFTW_ROOT=/path pip install .

# Metadata for wheel/sdist
[tool.scikit-build.metadata]
# Additional files to include in source distribution
[tool.scikit-build.sdist]
include = [
    "CMakeLists.txt",
    "cmake/*.cmake",
    "fidimag/**/*.pyx",
    "fidimag/**/*.pxd",
    "fidimag/**/*.h",
    "fidimag/**/*.c",
    "fidimag/**/*.cpp",
]
exclude = [
    "**/*.so",
    "**/.DS_Store",
    "**/__pycache__",
]

# Wheel building
[tool.scikit-build.wheel]
# Expand the macos deployment target to support older macs
expand-macos-universal-tags = true

# Install dir should be empty - CMake handles the full path
install-dir = ""

# Cython configuration
[tool.cython]
# Global Cython compiler directives
[tool.cython.compile]
linetrace = true
language_level = "3"

# Package discovery
[tool.setuptools]
# These are read by scikit-build-core for package discovery
packages = [
    "fidimag",
    "fidimag.atomistic",
    "fidimag.micro",
    "fidimag.common",
    "fidimag.extensions",
]

[tool.setuptools.package-data]
fidimag = ["*.pyx", "*.pxd", "*.h"]

# pytest configuration
[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "run_oommf: marks tests that require OOMMF (deselect with '-m \"not run_oommf\"')",
]

# Coverage configuration
[tool.coverage.run]
source = ["fidimag"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
